--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <div class="page--item_inner">
       <div class="inner--content">
         <img class="w-100 img-fluid" src="/img/Plakate_Vektorisiert_insta-27.png" alt="book" />
-      <p>A(rs)achtest Du Grenzen?</p>
+      <p>A(rs)chtest Du Grenzen?</p>
       </div>
     </div>
   </div>
