--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
 <!-- INFO -->
 <section class="info">
   <div class="row">
-    <div class="col-4">
+    <div class="col-4 col-sm-4">
       <h3>96</h3>
     </div>
-    <div class="col-3">
+    <div class="col-3 col-sm-4">
       <p>Questions</p>
     </div>
-    <div class="col-5">
+    <div class="col-5 col-sm-4">
       <span>How to live and work<br>and not getting fucked up too much</span>
     </div>
   </div>
